--- a/index.html
+++ b/index.html
@@ -1,9 +1,31 @@
-## Open Source Self Driving Car Initiative
+<html>
+    <head>
+        <link href="css/bootstrap.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
+        <link href="css/font-awesome.min.css" rel="stylesheet">
+        <link href="css/font-awesome.css" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,700,800|Quicksand:300,400,700" rel="stylesheet">
+        <link rel="shortcut icon" href="img/icon-blue.ico">
+    </head>
+    <body>
+        <img src="img/autti-logo-05.png"></img>
+        <p>Data and engineering for open source self driving cars.</p>
+        <span class="contact">
+            <a href="mailto:ariel@autti.co" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+            <a href="https://github.com/autti" target="_blank"><i class="fa fa-github-alt" aria-hidden="true"></i></a>
+            <!-- <a href="#" target="_blank"><i class="fa fa-slack" aria-hidden="true"></i></a> -->
+            <a href="https://medium.com/@autti" target="_blank"><i class="fa fa-medium" aria-hidden="true"></i></a>
 
-A global open organization comprised of several dedicated teams working on full stack open source software and hardware to allow anyone to build from toy to full size self driving cars
+        </span>
+        <script>
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-We invite everyone to join the conversation and participate in OSSDC Slack team
-
-If you have not registered yet on OSSDC Slack, here you can get an invitation to join the team: http://ossdc.org/join.php
-
-The OSSDC Organization and Source Code is managed completely in an open way on GitHub at: https://github.com/OSSDC
+            ga('create', 'UA-86429202-1', 'auto');
+            ga('send', 'pageview');
+        </script>
+    </body>
+</html>
