--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <img src="img/autti-logo-05.png"></img>
-        <p>Data and engineering for open source self driving cars.</p>
+        <p>Open Source Self Driving Car Initiative.</p>
         <span class="contact">
             <a href="mailto:ariel@autti.co" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a>
             <a href="https://github.com/autti" target="_blank"><i class="fa fa-github-alt" aria-hidden="true"></i></a>
