--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1>Open Source Self Driving Car Initiative</h1>
 
-A global open organization comprised of several dedicated teams working on full stack open source software and hardware to allow anyone to build from toy to full size self driving cars
+A global open organization comprised of several dedicated teams working (in their free time) on full stack open source software and hardware to allow anyone to build from toy to full size self driving cars
 
 We invite everyone to join the conversation and participate in OSSDC Slack team
 
