--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
 A global open organization comprised of several dedicated teams working (in their free time) on full stack open source software and hardware to allow anyone to build from toy to full size self driving cars
 </p>
    
+<p>
 We invite everyone to join the conversation and participate in OSSDC Slack team
+</p>
 
+<p>
 If you have not registered yet on OSSDC Slack, here you can get an invitation to join the team: http://ossdc.org/join.php
+<a href="http://ossdc.org/join.php">http://ossdc.org/join.php</a>
+</p>
 
-The OSSDC Organization and Source Code is managed completely in an open way on GitHub at: https://github.com/OSSDC
+
+<p>
+The OSSDC Organization and Source Code is managed completely in an open way on GitHub at: <a href="https://github.com/OSSDC">https://github.com/OSSDC</a>
+<p>
