--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <h1>Open Source Self Driving Car Initiative</h1>
 
 <p>
-A global open organization comprised of several dedicated teams working (in their free time) on full stack open source software and hardware to allow anyone to build from toy to full size self driving cars
+A global and open organization comprised of several dedicated people working (in their free time) on full stack open source software and hardware to allow anyone to build from toy to full size self driving cars
 </p>
    
 <p>
