--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<title>Open Source Self Driving Car Initiative</title>
+       	<link href="assets/css/style.css" rel="stylesheet">
 	</head>
 	<body>
 		<center>
