--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 layout: default
 title: Open Source Self Driving Car Initiative
 ---
-
+<div id="home">
+  <h1>Blog Posts</h1>
+</div>
 <div id="home">
   <h1>Blog Posts</h1>
   <ul class="posts">
@@ -10,3 +12,4 @@ title: Open Source Self Driving Car Initiative
       <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
 </ul>
+</div>
