--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 layout: default
 title: Open Source Self Driving Car Initiative
 ---
-<div id="home">
-  <h1>Blog Posts</h1>
+<div id="title">
+  <h1>Open Source Self Driving Car Initiative</h1>
 </div>
 <div id="home">
   <h1>Blog Posts</h1>
