--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 ---
 layout: default
 title: Open Source Self Driving Car Initiative
+published: true
 ---
+---
+layout: default
+title: Open Source Self Driving Car Initiative
+---
+
 <div id="title">
   <h1>Open Source Self Driving Car Initiative</h1>
 </div>
